# disco

./: .gitignore  README.md  pyproject.toml
disco/: __init__.py  __main__.py  cli.py  config.py
disco/asr/: __init__.py  granite.py  hallucination.py  qwen.py  transcriber.py
disco/audio/: __init__.py  capture.py  frame.py  source.py  utils.py
disco/diar/: __init__.py  sortformer.py
disco/output/: __init__.py  console.py
disco/runtime/: __init__.py  coordinator.py  debug.py  enricher.py  events.py  interim_translator.py  runtime.py  transcriber_worker.py  translation_service.py  turn_controller.py  turn_detector.py
disco/translation/: __init__.py  korean.py
disco/vad/: __init__.py  silero.py  smart_turn.py
disco/web/: __init__.py  app.py  server.py  service.py
disco/web/static/: index.html
disco/web/static/assets/: index-2yPSBL9E.js  index-767I3ODx.js  index-BmHC4j93.js  index-C3V_Cl3f.css  index-CSd-8oz6.js  index-CZwzc7X8.js  index-CdHsn8M6.js  index-CjobrNrp.js  index-DAIdrOuW.js  index-D_eKl1RF.js  index-DjxZHCY8.js  index-K16hI0eB.js  index-RAS89Pe_.css  index-cDB-OyWs.css
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/state/: disco.ts
tests/: test_audio_source.py  test_korean_translator.py  test_speaker_pipeline.py  test_translation_service.py
