[project]
name = "disco"
version = "0.1.0"
description = "Real-time ASR using mlx-audio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-audio>=0.4.3",
    "mlx-lm>=0.30.5",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "fastapi==0.128.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[project.scripts]
disco = "disco.__main__:main"
disco-web = "disco.web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
